# matrix-transposer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_client.sh  run_me.sh
benchmarks/: bechmark_SpscQueueMultiProcess.cpp  bechmark_SpscQueueMultiThreaded.cpp  bechmark_SpscQueueSingleThreaded.cpp  benchmark_Futex.cpp  benchmark_SpscQueueRingBufferMultiProcess.cpp  benchmark_SpscQueueRingBufferMultiThreaded.cpp  benchmark_SpscQueueRingBufferSingleThreaded.cpp  benchmark_SpscQueueSeqLockMultiProcess.cpp  benchmark_SpscQueueSeqLockMultiThreaded.cpp  benchmark_SpscQueueSeqLockSingleThreaded.cpp  benchmark_mat-transpose_TransposeTiledMultiThreaded.cpp  benchmark_mat-transpose_TransposeTiledMultiThreadedOptimized.cpp
include/: MatrixBuffer.h  UnixSocketClient.h  UnixSocketServer.h
include/ipc/: ClientRequest.h  ClientSetupMessage.h  Futex.h  MPSCQueue.h  MPSCQueueRingBuffer.h  MpscQueue.h  MpscQueueRingBuffer.h  SharedMatrixBuffer.h  UnixSocketClient.h  UnixSocketServer.h
include/utilities/: Endpoint.h
lib/futex/: Futex.cpp  Futex.h  FutexSignaller.cpp  FutexSignaller.h
lib/mat-transpose/: MatricesAreEqual.cpp  TransposeNaive.cpp  TransposeNaiveInPlace.cpp  TransposeRecursive.cpp  TransposeRecursiveInPlace.cpp  TransposeTiledInPlaceMultiThreaded.cpp  TransposeTiledMultiThreaded.cpp  TransposeTiledMultiThreadedOptimized.cpp  mat-transpose.cpp  mat-transpose.h
lib/matrix-buf/: SharedMatrixBuffer.cpp  SharedMatrixBuffer.h
lib/mem-utils/: MemoryUtils.h
lib/presentation/: Table.h
lib/shared-mem/: SharedMatrixBuffer.cpp  SharedMatrixBuffer.h  SharedMemory.cpp  SharedMemory.h
lib/spsc-queue/: SpscQueue.cpp  SpscQueue.h  SpscQueueRingBuffer.cpp  SpscQueueRingBuffer.h  SpscQueueSeqLock.cpp  SpscQueueSeqLock.h
lib/stats/: ClientStats.h
lib/unix-socks/: UnixSockIpcBase.h  UnixSockIpcClient.h  UnixSockIpcServer.h
src/: MatrixBuffer.cpp  UnixSocketClient.cpp  UnixSocketServer.cpp  transpose_client.cpp  transpose_server.cpp
src/ipc/: Futex.cpp  MPSCQueue.cpp  MPSCQueueClass.cpp  MpscQueue.cpp  SharedMatrixBuffer.cpp  UnixSocketClient.cpp  UnixSocketServer.cpp
tests/: a.cpp  b.cpp  test_Futex.cpp  test_FutexSignaller.cpp  test_MatrixBuffer.cpp  test_MemoryUtils.cpp  test_SharedMatrixBuffer.cpp  test_SpscQueue.cpp  test_SpscQueueRingBuffer.cpp  test_SpscQueueSeqLock.cpp  test_UnixSockets.cpp  test_mat-transpose.cpp
transposer_demo/common/: BufferDimensions.h  ClientServerMessage.h  ClientStats.h  Constants.h
transposer_demo/transpose_client/: ClientWorkspace.h  transpose_client.cpp
transposer_demo/transpose_server/: ClientContext.h  ServerWorkspace.h  transpose_server.cpp
